--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "firebase": "^9.17.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
