--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.2.1",
     "firebase": "^9.17.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.8.1",
     "sort-by": "^1.2.0"
   },
